--- a/metadata.yaml
+++ b/metadata.yaml
@@ -15,6 +15,8 @@
 homepage: "https://www.clickdefense.io"
 documentation: "https://www.clickdefense.io/gtm-manual.html"
 versions:
+  - sha: be3a588bcb3578d3c39463736a2e687d3da07fb4
+    changeNotes: Remove logs
   - sha: 71815b27cef0f305bdc6b7c5e65b3232a3d55cb8
     changeNotes: ClickDefense tagmanager js
   - sha: b1290c1942e737157a4ba0ac00c7729176c834f1
